# hyprshot-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  README_RU.md
.github/workflows/: rust.yml
doc/: CLI.md
src/: args.rs  capture.rs  desktop.rs  environment.rs  grim.rs  main.rs  save.rs  utils.rs  wayland.rs
