[package]
name = "hyprshot-rs"
version = "0.1.0"
edition = "2024"
description = "A utility to easily take screenshots in Hyprland using your mouse"
license = "GNU GENERAL PUBLIC LICENSE"
repository = "https://github.com/vremyavnikuda/hyprshot-rs"
homepage = "https://github.com/vremyavnikuda/hyprshot-rs"
keywords = ["hyprland", "screenshot", "wayland", "cli"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.11"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"

[dependencies.wayland-client]
version = "0.31"
optional = true

[dependencies.wayland-protocols]
version = "0.32"
optional = true
features = ["unstable"]

[dependencies.image]
version = "0.25"
optional = true

[features]
default = ["grim"]
grim = []
native = ["wayland-client", "wayland-protocols", "image"]